6831604: missing null check in guarantee

Reviewed-by: kvn